--- a/CG_MATH_D3D/CG_MATH_D3D.vcxproj.filters
+++ b/CG_MATH_D3D/CG_MATH_D3D.vcxproj.filters
@@ -1,12 +1,64 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns:atg="http://atg.xbox.com" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{8e114980-c1a3-4ada-ad7c-83caadf5daeb}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe</Extensions>
+    <Filter Include="SourceFile">
+      <UniqueIdentifier>{f058c41b-e1a3-4c7e-b715-b7b82d4848cc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="HeadFile">
+      <UniqueIdentifier>{d8b5c77a-f2d9-474b-95ea-c56fa9a2455f}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Tutorial01.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="EulerAngles.cpp">
+      <Filter>SourceFile</Filter>
+    </ClCompile>
+    <ClCompile Include="FPScamera.cpp">
+      <Filter>SourceFile</Filter>
+    </ClCompile>
+    <ClCompile Include="MathUtil.cpp">
+      <Filter>SourceFile</Filter>
+    </ClCompile>
+    <ClCompile Include="Matrix4x4.cpp">
+      <Filter>SourceFile</Filter>
+    </ClCompile>
+    <ClCompile Include="Quaternion.cpp">
+      <Filter>SourceFile</Filter>
+    </ClCompile>
+    <ClCompile Include="RotationMatrix.cpp">
+      <Filter>SourceFile</Filter>
+    </ClCompile>
+    <ClCompile Include="vector3.cpp">
+      <Filter>SourceFile</Filter>
+    </ClCompile>
+    <ClCompile Include="Matrix4x3.cpp">
+      <Filter>SourceFile</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="EulerAngles.h">
+      <Filter>HeadFile</Filter>
+    </ClInclude>
+    <ClInclude Include="FPScamera.h">
+      <Filter>HeadFile</Filter>
+    </ClInclude>
+    <ClInclude Include="MathUtil.h">
+      <Filter>HeadFile</Filter>
+    </ClInclude>
+    <ClInclude Include="Matrix4x4.h">
+      <Filter>HeadFile</Filter>
+    </ClInclude>
+    <ClInclude Include="Quaternion.h">
+      <Filter>HeadFile</Filter>
+    </ClInclude>
+    <ClInclude Include="RotationMatrix.h">
+      <Filter>HeadFile</Filter>
+    </ClInclude>
+    <ClInclude Include="vector3.h">
+      <Filter>HeadFile</Filter>
+    </ClInclude>
+    <ClInclude Include="Matrix4x3.h">
+      <Filter>HeadFile</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
