--- a/CG_MATH_D3D/CG_MATH_D3D.vcxproj
+++ b/CG_MATH_D3D/CG_MATH_D3D.vcxproj
@@ -349,6 +349,7 @@
   <ItemGroup>
     <ClCompile Include="EulerAngles.cpp" />
     <ClCompile Include="FPScamera.cpp" />
+    <ClCompile Include="inputclass.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MathUtil.cpp" />
     <ClCompile Include="Matrix4x3.cpp" />
@@ -360,6 +361,7 @@
   <ItemGroup>
     <ClInclude Include="EulerAngles.h" />
     <ClInclude Include="FPScamera.h" />
+    <ClInclude Include="inputclass.h" />
     <ClInclude Include="MathUtil.h" />
     <ClInclude Include="Matrix4x3.h" />
     <ClInclude Include="Matrix4x4.h" />
