--- a/CG_MATH_D3D/CG_MATH_D3D.vcxproj.filters
+++ b/CG_MATH_D3D/CG_MATH_D3D.vcxproj.filters
@@ -40,10 +40,10 @@
     <ClCompile Include="Matrix4x3.cpp">
       <Filter>SourceFile</Filter>
     </ClCompile>
-    <ClCompile Include="inputclass.cpp">
-      <Filter>SourceFile</Filter>
-    </ClCompile>
     <ClCompile Include="test.cpp">
+      <Filter>Test</Filter>
+    </ClCompile>
+    <ClCompile Include="inputclass.cpp">
       <Filter>Test</Filter>
     </ClCompile>
   </ItemGroup>
@@ -72,10 +72,10 @@
     <ClInclude Include="Matrix4x3.h">
       <Filter>HeadFile</Filter>
     </ClInclude>
-    <ClInclude Include="inputclass.h">
-      <Filter>HeadFile</Filter>
-    </ClInclude>
     <ClInclude Include="test.h">
+      <Filter>Test</Filter>
+    </ClInclude>
+    <ClInclude Include="inputclass.h">
       <Filter>Test</Filter>
     </ClInclude>
   </ItemGroup>
